@@ -301,7 +301,7 @@ if($env!="" && $site!="" && $CONTENTID!=""){
                 $DEALER=$r[0]["DEALER"];
                 $food.="<div class='filibuster-copyright'>";
                 $food.="Filibuster v1.0 - Technology <a href='http://www.rudyz.net/' target='_blank'>Le Cose di Rudy</a>";
-                $food.=" - Speech synthesis <a href='http://www.fromtexttospeech.com/' target='_blank'>TextToSpeech</a> and <a href='http://vozme.com/' target='_blank'>vozMe</a>";
+                $food.=" - Speech synthesis <a href='http://www.fromtexttospeech.com/' target='_blank'>TextToSpeech</a>";
                 if($DEALER!=""){
                     $food.=" - Dealer $DEALER";
                 }
