@@ -1,4 +1,10 @@
 ==================================
+Rilascio 1.70.15    del 02/02/2016
+==================================
+
+Filibuster: aggiornato il meccanismo di sintesi vocale.
+
+==================================
 Rilascio 1.70.14    del 01/02/2016
 ==================================
 
